--- a/template/home/index.html.twig
+++ b/template/home/index.html.twig
@@ -8,7 +8,8 @@
         <table class="table table-bordered">
             {% for trailer in trailers %}
                 <tr>
-                    <td>{{ trailer.title }}</td>
+                    <td width="135"><img src="{{ trailer.image }}" alt="{{ trailer.title }}" border="0" /></td>
+                    <td><a href="/trailer/{{ trailer.id }}" title="{{ trailer.title }}">{{ trailer.title }}</a></td>
                 </tr>
             {% endfor %}
         </table>
