Added link to set like

--- a/template/home/index.html.twig
+++ b/template/home/index.html.twig
@@ -10,6 +10,7 @@
                 <tr>
                     <td width="135" ><img src="{{ trailer.image }}" alt="{{ trailer.title }}" width="135" height="200" border="0" /></td>
                     <td><a href="/trailer/{{ trailer.id }}" title="{{ trailer.title }}">{{ trailer.title }}</a></td>
+                    <td><a href="/trailer/{{ trailer.id }}/like" title="Like {{ trailer.title }}">Like ({{ trailer.likes.count }})</a></td>
                 </tr>
             {% endfor %}
         </table>
